20803 dina service as interface
revert use of guava for mapping layer